# zope.browserresource

./: .coveragerc  .gitignore  .meta.toml  .travis.yml  CHANGES.rst  CHANGES.txt  MANIFEST.in  README.rst  README.txt  buildout.cfg  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: conf.py  directory.rst  file.rst  i18nfile.rst  index.rst  interfaces.rst  overview.rst  resource.rst  resources.rst  zcml.rst
src/zope/browserresource/: configure.zcml  directory.py  file.py  i18nfile.py  icon.py  interfaces.py  metaconfigure.py  metadirectives.py  resource.py  resources.py
src/zope/browserresource/tests/: support.py  test_configure.py  test_directives.py  test_directory.py  test_file.py  test_i18nfile.py  test_icondirective.py  test_resource.py  test_resources.py
